DSR-21: update plotly notebooks

--- a/PLOTLY/notebooks/03 - Subplots.ipynb
+++ b/PLOTLY/notebooks/03 - Subplots.ipynb
@@ -43,23 +43,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Appending traces with `.append_trace`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Then we use the method 'append_trace' to append each trace to the indicated subplot\n",
+    "# Once the figure has been created, we use the method 'append_trace' to append each trace to the indicated subplot\n",
     "import numpy as np\n",
     "x = np.linspace(0, 2*np.pi)\n",
     "trace0 = dict(type='scatter', x=x, y=np.sin(x), name='sin(x)')\n",
     "trace1 = dict(type='scatter', x=x, y=np.cos(x), name='cos(x)')\n",
     "\n",
     "fig.append_trace(trace0, 1, 1)\n",
-    "fig.append_trace(trace1, 1, 2)\n",
-    "\n",
-    "# Alternatively you can use add_scatter (or whatever add_...) specifying the axes to which it should be attached\n",
-    "# fig.add_scatter(x=x, y=np.sin(x), name='sin(x)', xaxis='x1')\n",
-    "# fig.add_scatter(x=x, y=np.cos(x), name='cos(x)', xaxis='x2')"
+    "fig.append_trace(trace1, 1, 2)"
    ]
   },
   {
@@ -75,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The layout can be modified a posteriori"
+    "## Appending a spcific type of trace with the `.add_` methods"
    ]
   },
   {
@@ -84,16 +87,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# either accessing each key individually with the dot notation:\n",
-    "fig.layout.xaxis1.title = 'x'\n",
-    "fig.layout.xaxis2.title = 'x'\n",
-    "fig.layout.yaxis1.title = 'f(x)'\n",
-    "fig.layout.title = 'Trigonometric functions'\n",
-    "fig.layout.showlegend = False\n",
-    "fig.layout.width = 900\n",
-    "fig.layout.height = 500\n",
-    "\n",
-    "fig.show()"
+    "# Alternatively you can use add_scatter (or whatever add_...) specifying the axes to which it should be attached\n",
+    "# fig.add_scatter(x=x, y=np.sin(x), name='sin(x)', xaxis='x1')\n",
+    "# fig.add_scatter(x=x, y=np.cos(x), name='cos(x)', xaxis='x2')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The `.update_` methods to change the figure a posteriori"
    ]
   },
   {
@@ -102,29 +105,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# or updating all of them at once with the method 'update':\n",
-    "layout = dict(\n",
-    "    xaxis1=dict(title='x'), # Note that 'xaxis' and 'yaxis' have now suffixes starting from 1\n",
-    "    xaxis2=dict(title='x'),\n",
-    "    yaxis1=dict(title='f(x)'),\n",
-    "    title='Trigonometric functions',\n",
-    "    showlegend=False,\n",
-    "    width=900,\n",
-    "    height=500,\n",
-    ")\n",
+    "# Once the fig object has been created, and the traces have been added, \n",
+    "# one can update any aspect of it by concatenating the .update methods.\n",
+    "# Here are some of the most common use cases:\n",
     "\n",
-    "fig.layout.update(layout)\n",
-    "\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# or with the update_XXX convenient methods, that can be concatenated:\n",
     "fig.update_layout(\n",
     "    title='Trigonometric functions',\n",
     "    showlegend=False,\n",
@@ -135,6 +119,8 @@
     ").update_yaxes(\n",
     "    title='f(x)',\n",
     "    col=1,\n",
+    ").update_traces(\n",
+    "    mode='lines+markers',\n",
     ")\n",
     "\n",
     "fig.show()"
