--- a/PLOTLY/notebooks/04 - Things you can do with a Figure.ipynb
+++ b/PLOTLY/notebooks/04 - Things you can do with a Figure.ipynb
@@ -79,6 +79,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Introspect the fig object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.to_dict()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Display the result within the notebook"
    ]
   },
@@ -89,6 +105,16 @@
    "outputs": [],
    "source": [
     "fig.show(config=dict(displaylogo=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The figure can be shown also as a static image\n",
+    "fig.show(renderer='png')"
    ]
   },
   {
