Update Plotly notebooks

--- a/PLOTLY/notebooks/03 - Subplots.ipynb
+++ b/PLOTLY/notebooks/03 - Subplots.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Appending traces with `.append_trace`"
+    "## Adding traces with the `.add_` methods"
    ]
   },
   {
@@ -55,48 +55,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Once the figure has been created, we use the method 'append_trace' to append each trace to the indicated subplot\n",
+    "# Once the figure has been created, we can add traces to the indicated subplot\n",
     "import numpy as np\n",
     "x = np.linspace(0, 2*np.pi)\n",
-    "trace0 = dict(type='scatter', x=x, y=np.sin(x), name='sin(x)')\n",
-    "trace1 = dict(type='scatter', x=x, y=np.cos(x), name='cos(x)')\n",
     "\n",
-    "fig.append_trace(trace0, 1, 1)\n",
-    "fig.append_trace(trace1, 1, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig.show()"
+    "fig.add_scatter(x=x, y=np.sin(x), name='sin(x)', row=1, col=1)\n",
+    "fig.add_scatter(x=x, y=np.cos(x), name='cos(x)', row=1, col=2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Appending a spcific type of trace with the `.add_` methods"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Alternatively you can use add_scatter (or whatever add_...) specifying the axes to which it should be attached\n",
-    "# fig.add_scatter(x=x, y=np.sin(x), name='sin(x)', xaxis='x1')\n",
-    "# fig.add_scatter(x=x, y=np.cos(x), name='cos(x)', xaxis='x2')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## The `.update_` methods to change the figure a posteriori"
+    "## Change the figure a posteriori with the `.update_` methods"
    ]
   },
   {
@@ -121,9 +92,43 @@
     "    col=1,\n",
     ").update_traces(\n",
     "    mode='lines+markers',\n",
-    ")\n",
-    "\n",
-    "fig.show()"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# These methods return the modified fig, but also modify the fig object itself\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can .update_traces only in a particular row and/or col\n",
+    "fig.update_traces(\n",
+    "    col=1,\n",
+    "    mode='markers',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can also select a trace to update according to a selector\n",
+    "fig.update_traces(\n",
+    "    selector=dict(mode='lines+markers'),\n",
+    "    marker=dict(color='green'),\n",
+    ")"
    ]
   },
   {
@@ -183,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
