--- a/PLOTLY/notebooks/04 - Things you can do with a Figure.ipynb
+++ b/PLOTLY/notebooks/04 - Things you can do with a Figure.ipynb
@@ -104,6 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The .show method accepts a config parameter\n",
     "fig.show(config=dict(displaylogo=False))"
    ]
   },
@@ -169,24 +170,24 @@
     "with open('mydiv.html', 'r') as f:\n",
     "    div_str = f.read()\n",
     "\n",
-    "html_str = '''<!DOCTYPE html>\n",
-    "                <html>\n",
-    "                \n",
-    "                <head>\n",
-    "                  <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>\n",
-    "                </head>\n",
-    "                \n",
-    "                \n",
-    "                <body>\n",
-    "                  <h1>Simple Dashboard</h1>\n",
-    "                  <p>The following plot is static and interactive at the same time ;)</p>\n",
-    "                \n",
-    "                  {}\n",
-    "                \n",
-    "                </body>\n",
-    "                \n",
-    "                </html>\n",
-    "                '''.format(div_str)\n",
+    "html_str = f'''\n",
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "\n",
+    "  <head>\n",
+    "    <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>\n",
+    "  </head>\n",
+    "\n",
+    "  <body>\n",
+    "    <h1>Simple Dashboard</h1>\n",
+    "    <p>The following plot is static and interactive at the same time ;)</p>\n",
+    "\n",
+    "    {div_str}\n",
+    "\n",
+    "  </body>\n",
+    "\n",
+    "</html>\n",
+    "'''\n",
     "\n",
     "\n",
     "# The final string can be saved in a file\n",
@@ -198,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Export it as static image (requires ORCA installation: see [here](https://plot.ly/python/getting-started/#static-image-export-support))"
+    "#### Export it as static image (done by [`kaleido`](https://github.com/plotly/Kaleido) under the hood)"
    ]
   },
   {
@@ -271,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
