DSR-25 note on matplotlib compatibility

--- a/PLOTLY/notebooks/01 - Matplotlib to Plotly.ipynb
+++ b/PLOTLY/notebooks/01 - Matplotlib to Plotly.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### IMPORTANT: this feature is deprecated in Plotly and will not work with matplotlib > 3.2.2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -59,13 +66,6 @@
     "# Convert it to Plotly and display it here\n",
     "tls.mpl_to_plotly(fig)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
