DSR-25 Upgrade libraries

--- a/PLOTLY/notebooks/04 - Things you can do with a Figure.ipynb
+++ b/PLOTLY/notebooks/04 - Things you can do with a Figure.ipynb
@@ -92,6 +92,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# To get all the figure properties, including the default values (those that you haven't set yourself).\n",
+    "# This is useful to see the full list of things that you can change in a figure.\n",
+    "fig.full_figure_for_development(as_dict=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
