--- a/PLOTLY/notebooks/03 - Subplots.ipynb
+++ b/PLOTLY/notebooks/03 - Subplots.ipynb
@@ -80,18 +80,24 @@
     "# one can update any aspect of it by concatenating the .update methods.\n",
     "# Here are some of the most common use cases:\n",
     "\n",
-    "fig.update_layout(\n",
-    "    title='Trigonometric functions',\n",
-    "    showlegend=False,\n",
-    "    width=900,\n",
-    "    height=500,\n",
-    ").update_xaxes(\n",
-    "    title='x',\n",
-    ").update_yaxes(\n",
-    "    title='f(x)',\n",
-    "    col=1,\n",
-    ").update_traces(\n",
-    "    mode='lines+markers',\n",
+    "(\n",
+    "    fig\n",
+    "    .update_layout(\n",
+    "        title='Trigonometric functions',\n",
+    "        showlegend=False,\n",
+    "        width=900,\n",
+    "        height=500,\n",
+    "    )\n",
+    "    .update_xaxes(\n",
+    "        title='x',\n",
+    "    )\n",
+    "    .update_yaxes(\n",
+    "        title='f(x)',\n",
+    "        col=1,\n",
+    "    )\n",
+    "    .update_traces(\n",
+    "        mode='lines+markers',\n",
+    "    )\n",
     ")"
    ]
   },
@@ -188,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
