--- a/PLOTLY/notebooks/01 - Check that you are all set up.ipynb
+++ b/PLOTLY/notebooks/01 - Check that you are all set up.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# To check that Plotly installation is ok\n",
     "fig = go.Figure()\n",
     "fig.add_scatter(\n",
     "    x=[1,2,3],\n",
@@ -22,11 +23,28 @@
     ")\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To check that Kaleido installation is ok (optional, for static image generation)\n",
+    "fig.show(renderer='png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -40,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
