--- a/PLOTLY/notebooks/02 - Plotly Figure Building Blocks.ipynb
+++ b/PLOTLY/notebooks/02 - Plotly Figure Building Blocks.ipynb
@@ -185,7 +185,7 @@
    "source": [
     "Build the following scatter plot\n",
     "\n",
-    "![](images/fig_02.1.png)"
+    "![asd](images/fig_02.1.png)"
    ]
   },
   {
@@ -207,7 +207,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
