--- a/PLOTLY/notebooks/04 - Things you can do with a Figure.ipynb
+++ b/PLOTLY/notebooks/04 - Things you can do with a Figure.ipynb
@@ -258,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Take any of the Plotly figures built so far (or any one of your choice), embed it in your custom HTML document and host it in [GitHub pages](https://pages.github.com/) following the steps defined in the [slides](https://slides.com/chumo/plotly/)."
+    "Take any of the Plotly figures built so far (or any one of your choice), embed it in your custom HTML document and host it in [GitHub pages](https://pages.github.com/) following the steps defined in the [slides](https://slides.com/chumo/plotly/#/11/1)."
    ]
   },
   {
@@ -271,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -285,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
