--- a/PLOTLY/notebooks/05 - Plotly Express.ipynb
+++ b/PLOTLY/notebooks/05 - Plotly Express.ipynb
@@ -111,7 +111,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Plotly express also takes messy dataframes (suitable for quick visualizations during data exploration).\n",
@@ -146,6 +148,15 @@
    "source": [
     "import pandas as pd\n",
     "table = pd.read_csv('https://raw.githubusercontent.com/chumo/Data2Serve/master/transition_clusters.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table.head()"
    ]
   },
   {
@@ -222,11 +233,7 @@
     "\n",
     "![](images/fig_05.3.png)\n",
     "\n",
-    "![](images/fig_05.4.png)\n",
-    "\n",
-    "and this animated plot:\n",
-    "\n",
-    "![](images/fig_05.5.png)"
+    "![](images/fig_05.4.png)"
    ]
   },
   {
