Batch-32 Add doc links to exercises

--- a/PLOTLY/notebooks/02 - Plotly Figure Building Blocks.ipynb
+++ b/PLOTLY/notebooks/02 - Plotly Figure Building Blocks.ipynb
@@ -192,16 +192,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And the following histogram:\n",
+    "Check the docs:\n",
+    "\n",
+    "- [scatter mode](https://plotly.com/python/reference/#scatter-mode)\n",
+    "- [scatter marker-color](https://plotly.com/python/reference/#scatter-marker-color)\n",
+    "- [scatter hovertext](https://plotly.com/python/reference/scatter/#scatter-hovertext)\n",
+    "- [layout width and height](https://plotly.com/python/reference/layout/#layout-width)\n",
+    "- [layout xaxis range](https://plotly.com/python/reference/layout/xaxis/#layout-xaxis-range)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Build the following histogram:\n",
     "\n",
     "![](images/fig_02.2.png)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Check the docs:\n",
+    "\n",
+    "- [histogram nbinsx](https://plotly.com/python/reference/#histogram-nbinsx)\n",
+    "- [layout barmode](https://plotly.com/python/reference/layout/#layout-barmode)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
