--- a/PLOTLY/notebooks/05 - Plotly Express.ipynb
+++ b/PLOTLY/notebooks/05 - Plotly Express.ipynb
@@ -188,9 +188,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And now making each subplot as a frame of an animated plot:\n",
+    "Check the docs:\n",
+    "\n",
+    "- [plotly express scatter](https://plotly.com/python-api-reference/generated/plotly.express.scatter)\n",
+    "  - range_x\n",
+    "  - range_y\n",
+    "  - facet_row\n",
+    "  - labels\n",
+    "  - color_discrete_map\n",
+    "  - facet_row_spacing\n",
+    "  \n",
+    "After the figure has been created, you can hide the legend with:\n",
+    "\n",
+    "`.update_layout(showlegend=False)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And now try to make each subplot as a frame of an animated plot:\n",
     "\n",
     "![](images/fig_05.2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the docs:\n",
+    "\n",
+    "- [plotly express scatter](https://plotly.com/python-api-reference/generated/plotly.express.scatter)\n",
+    "  - animation_frame\n",
+    "  - category_orders"
    ]
   },
   {
@@ -229,11 +259,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Build the following plots:\n",
+    "Build the following plot:\n",
     "\n",
     "![](images/fig_05.3.png)\n",
     "\n",
-    "![](images/fig_05.4.png)"
+    "Check the docs:\n",
+    "\n",
+    "- [plotly express choropleth](http://plotly.com/python-api-reference/generated/plotly.express.choropleth)\n",
+    "  - locations\n",
+    "\n",
+    "And now the following plot:\n",
+    "\n",
+    "![](images/fig_05.4.png)\n",
+    "\n",
+    "Check the docs:\n",
+    "\n",
+    "- [plotly express box](https://plotly.com/python-api-reference/generated/plotly.express.box.html)\n",
+    "  - points"
    ]
   },
   {
@@ -287,7 +329,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('dovedev')",
    "language": "python",
    "name": "python3"
   },
@@ -301,7 +343,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "df40f8d1ebeddcd5602eb3f0740e16ea250630c3a14f9ffb106c10731837092f"
+   }
   }
  },
  "nbformat": 4,
