--- a/PLOTLY/notebooks/03 - Subplots.ipynb
+++ b/PLOTLY/notebooks/03 - Subplots.ipynb
@@ -171,16 +171,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Check the docs:\n",
+    "\n",
+    "- [make_subplots](https://plotly.com/python-api-reference/generated/plotly.subplots.make_subplots.html)\n",
+    "  - vertical_spacing\n",
+    "  - subplot_titles\n",
+    "  - shared_xaxes\n",
+    "- [layout xaxis range](https://plotly.com/python/reference/layout/xaxis/#layout-xaxis-range)\n",
+    "- [layout xaxis domain](https://plotly.com/python/reference/layout/xaxis/#layout-xaxis-domain)\n",
+    "- [layout margin t, r, b, l](https://plotly.com/python/reference/layout/#layout-margin)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('dovedev')",
    "language": "python",
    "name": "python3"
   },
@@ -194,7 +207,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "df40f8d1ebeddcd5602eb3f0740e16ea250630c3a14f9ffb106c10731837092f"
+   }
   }
  },
  "nbformat": 4,
