Batch-32: small fix on hints

--- a/PLOTLY/notebooks/05 - Plotly Express.ipynb
+++ b/PLOTLY/notebooks/05 - Plotly Express.ipynb
@@ -195,6 +195,7 @@
     "  - range_y\n",
     "  - facet_row\n",
     "  - labels\n",
+    "  - color\n",
     "  - color_discrete_map\n",
     "  - facet_row_spacing\n",
     "  \n",
