fix the plotly js version in the html creation

--- a/PLOTLY/notebooks/04 - Things you can do with a Figure.ipynb
+++ b/PLOTLY/notebooks/04 - Things you can do with a Figure.ipynb
@@ -52,15 +52,15 @@
     "\n",
     "# Traces\n",
     "trace0 = dict(\n",
-    "    type='scatter', \n",
-    "    x=x, \n",
-    "    y=np.sin(x), \n",
+    "    type='scatter',\n",
+    "    x=x,\n",
+    "    y=np.sin(x),\n",
     "    name='sin(x)'\n",
     ")\n",
     "trace1 = dict(\n",
-    "    type='scatter', \n",
-    "    x=x, \n",
-    "    y=np.cos(x), \n",
+    "    type='scatter',\n",
+    "    x=x,\n",
+    "    y=np.cos(x),\n",
     "    name='cos(x)'\n",
     ")\n",
     "\n",
@@ -72,7 +72,7 @@
     ")\n",
     "\n",
     "# Figure\n",
-    "fig = go.Figure(data=[trace0, trace1], layout=layout) "
+    "fig = go.Figure(data=[trace0, trace1], layout=layout)"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "source": [
     "# This includes by default all necessary code (including Plotly.js) to render the plot\n",
     "fig.write_html(\n",
-    "    file='sin_cos.html', \n",
+    "    file='sin_cos.html',\n",
     "    include_plotlyjs='cdn',\n",
     "    config=dict(displaylogo=False),\n",
     ")"
@@ -166,7 +166,7 @@
    "outputs": [],
    "source": [
     "fig.write_html(\n",
-    "    file='mydiv.html', \n",
+    "    file='mydiv.html',\n",
     "    include_plotlyjs=False,\n",
     "    config=dict(displaylogo=False),\n",
     "    full_html=False,\n",
@@ -188,7 +188,7 @@
     "<html>\n",
     "\n",
     "  <head>\n",
-    "    <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>\n",
+    "    <script src='https://cdn.plot.ly/plotly-3.0.1.min.js'></script>\n",
     "  </head>\n",
     "\n",
     "  <body>\n",
